Done All7refactoredn5exceptionTests